[project]
name = "appr-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "kagglehub>=1.0.0",
    "lifelines>=0.30.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "polars>=1.39.0",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
